# Wafer

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENCE.txt  README.md  aliases.js  build.rs  gen_potential.py  index.html  search-index.js  wafer.cfg  wafer.hjson  wafer.yaml
analysis/matlab/: load_plain.m
analysis/python/: yt_plain.py
implementors/error_chain/: trait.ChainedError.js
implementors/lazy_static/: trait.LazyStatic.js
src/: config.rs  errors.rs  grid.rs  input.rs  main.rs  output.rs  potential.rs
src/wafer/: config.rs.html  errors.rs.html  grid.rs.html  input.rs.html  main.rs.html  output.rs.html  potential.rs.html
wafer/: all.html  exit_with_pause.v.html  fn.exit_with_pause.html  fn.main.html  fn.sha.html  fn.short_sha.html  index.html  sha.v.html  short_sha.v.html  sidebar-items.js
wafer/config/: CentralDifference.t.html  Index3.t.html  InitialCondition.t.html  PotentialType.t.html  SymmetryConstraint.t.html  _IMPL_DESERIALIZE_FOR_CentralDifference.v.html  _IMPL_DESERIALIZE_FOR_FileType.v.html  _IMPL_DESERIALIZE_FOR_Grid.v.html  _IMPL_DESERIALIZE_FOR_Index3.v.html  _IMPL_DESERIALIZE_FOR_InitialCondition.v.html  _IMPL_DESERIALIZE_FOR_Output.v.html  _IMPL_DESERIALIZE_FOR_Point3.v.html  _IMPL_DESERIALIZE_FOR_PotentialType.v.html  _IMPL_DESERIALIZE_FOR_SymmetryConstraint.v.html  _IMPL_SERIALIZE_FOR_CentralDifference.v.html  _IMPL_SERIALIZE_FOR_FileType.v.html  _IMPL_SERIALIZE_FOR_Grid.v.html  _IMPL_SERIALIZE_FOR_Index3.v.html  _IMPL_SERIALIZE_FOR_InitialCondition.v.html  _IMPL_SERIALIZE_FOR_Output.v.html  _IMPL_SERIALIZE_FOR_Point3.v.html  _IMPL_SERIALIZE_FOR_PotentialType.v.html  _IMPL_SERIALIZE_FOR_SymmetryConstraint.v.html  constant._IMPL_DESERIALIZE_FOR_CentralDifference.html  constant._IMPL_DESERIALIZE_FOR_Config.html  constant._IMPL_DESERIALIZE_FOR_FileType.html  constant._IMPL_DESERIALIZE_FOR_Grid.html  constant._IMPL_DESERIALIZE_FOR_Index3.html  constant._IMPL_DESERIALIZE_FOR_InitialCondition.html  constant._IMPL_DESERIALIZE_FOR_Output.html  constant._IMPL_DESERIALIZE_FOR_Point3.html  constant._IMPL_DESERIALIZE_FOR_PotentialType.html  constant._IMPL_DESERIALIZE_FOR_SymmetryConstraint.html  constant._IMPL_SERIALIZE_FOR_CentralDifference.html  constant._IMPL_SERIALIZE_FOR_Config.html  constant._IMPL_SERIALIZE_FOR_FileType.html  constant._IMPL_SERIALIZE_FOR_Grid.html  constant._IMPL_SERIALIZE_FOR_Index3.html  constant._IMPL_SERIALIZE_FOR_InitialCondition.html  constant._IMPL_SERIALIZE_FOR_Output.html  (+25 more)
wafer/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
wafer/grid/: Observables.t.html  compute_observables.v.html  eta.v.html  evolve.v.html  fn.compute_observables.html  fn.eta.html  fn.evolve.html  fn.get_mut_work_area.html  fn.get_norm_squared.html  fn.get_work_area.html  fn.normalise_wavefunction.html  fn.orthogonalise_wavefunction.html  fn.run.html  fn.solve.html  get_mut_work_area.v.html  get_norm_squared.v.html  get_work_area.v.html  index.html  normalise_wavefunction.v.html  orthogonalise_wavefunction.v.html  sidebar-items.js  struct.Observables.html
wafer/input/: PlainRecord.t.html  _IMPL_DESERIALIZE_FOR_PlainRecord.v.html  check_input_dir.v.html  check_potential_file.v.html  check_potential_sub_file.v.html  check_wavefunction_file.v.html  constant._IMPL_DESERIALIZE_FOR_PlainRecord.html  fill_data.v.html  fill_sub_data.v.html  fn.check_input_dir.html  fn.check_potential_file.html  fn.check_potential_sub_file.html  fn.check_wavefunction_file.html  fn.fill_data.html  fn.fill_sub_data.html  fn.load_wavefunctions.html  fn.potential.html  fn.potential_sub.html  fn.read_csv.html  fn.read_json.html  fn.read_mpk.html  fn.read_ron.html  fn.read_sub_csv.html  fn.read_sub_json.html  fn.read_sub_mpk.html  fn.read_sub_ron.html  fn.read_sub_yaml.html  fn.read_yaml.html  fn.script_potential.html  fn.trilerp_resize.html  fn.wavefunction.html  index.html  load_wavefunctions.v.html  read_csv.v.html  read_json.v.html  read_mpk.v.html  read_ron.v.html  read_sub_csv.v.html  read_sub_json.v.html  (+9 more)
(+104 files in other folders)
