[package]
name = "wafer"
version = "0.1.0"
authors = ["Tim DuBois <tim.dubois@tcqp.org>"]
description = """
Wafer exploits a Wick-rotated time-dependent Schrödinger equation to solve for time-independent solutions in three dimensions.
"""
readme = "README.md"
homepage = "http://wafer.tcqp.science"
documentation = "https://libbum.github.io/Wafer/wafer/index.html"
repository = "https://github.com/Libbum/Wafer"
license = "MIT"
build = "build.rs"

[[bin]]
bench = false
path = "src/main.rs"
name = "wafer"

[dependencies]
ansi_term = "0.9"
blas-sys = { version = "0.6", default-features = false, features = ["openblas"] }
chrono = "0.3"
clap = "~2.24.2"
clippy = {git = "https://github.com/Manishearth/rust-clippy", optional = true}
complexfloat = { git = "https://github.com/Libbum/complexfloat" }
csv = "1.0.0-beta.3"
error-chain = "0.10"
indicatif = "0.5"
lazy_static = "0.2"
ndarray = { git = "https://github.com/Libbum/rust-ndarray", branch = "serde-1.0", features = ["serde", "blas"] }
ndarray-parallel = { git = "https://github.com/Libbum/ndarray-parallel" }
num = "0.1"
num-complex = { git = "https://github.com/rust-num/num", branch = "next", features = ["serde"] }
num-traits = { git = "https://github.com/rust-num/num", branch = "next" }
num_cpus = "1.4"
ordinal = "0.1"
rand = "0.3"
rayon = "0.7"
rmp-serde = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
serde_yaml = "0.7"
slog = "2"
slog-async = "2"
slog-term = "2"
term_size = "0.3"

[build-dependencies]
vergen = "~0.1.0"

[features]
default = []
