[package]
name = "wafer"
version = "0.1.0"
authors = ["Tim DuBois <tim.dubois@tcqp.org>"]
description = """
Wafer exploits a Wick-rotated time-dependent Schrödinger equation to solve for time-independent solutions in three dimensions.
"""
readme = "README.md"
homepage = "http://wafer.tcqp.science"
documentation = "https://libbum.github.io/Wafer/wafer/index.html"
repository = "https://github.com/Libbum/Wafer"
license = "MIT"
build = "build.rs"

[[bin]]
bench = false
path = "src/main.rs"
name = "wafer"

[dependencies]
clippy = {version = "*", optional = true}
yansi = "0.3"
chrono = "0.4"
clap = "2.31"
ron = "0.2"
csv = "1.0.0-beta.5"
error-chain = "0.11"
indicatif = "0.9"
lazy_static = "1.0"
ndarray = { version = "0.11", features = ["serde-1", "blas"] }
blas-src = { version = "0.1.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.5.6", default-features = false, features = ["cblas", "system"] }
ndarray-parallel = "0.8"
num = "0.1"
num_cpus = "1.8"
noisy_float = { version = "0.1", features = ["serde-1"] }
ordinal = "0.1"
rand = "0.4"
rayon = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
slog = "2.1"
slog-async = "2.2"
slog-term = "2.3"
term_size = "1.0.0-beta1"

[build-dependencies]
vergen = "~0.1.0"

[features]
default = []
